# liteviz

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  main.cpp
cmake/depends/: cxxopts.cmake  eigen.cmake  glad.cmake  glfw.cmake  imgui.cmake  pybind11.cmake  tinyply.cmake
core/: mesh.h  shader.h  viewer.cpp  viewer.h  viewport.h  window.h
examples/cube/: CMakeLists.txt  main.cpp
liteviz/: CMakeLists.txt  mesh.h  viewer.cpp  viewer.h  viewport.h
liteviz/assets/: JetBrainsMono-LICENSE.txt
liteviz/core/: base_config.h  base_data.h  base_renderer.h  common.h  cudabuffer.h  detail.cpp  detail.h  image.h  mesh.h  shader.h  utils.h  viewer.h  viewport.h
liteviz/shaders/: draw_grid.frag  draw_grid.vert  draw_point.frag  draw_point.vert
liteviz/utils/: stb_impl.cpp
shaders/: draw_grid.vert  draw_surfels.frag  draw_surfels.geom  draw_surfels.vert  draw_texture.frag  draw_texture.vert  draw_triangles.frag  draw_triangles.vert
